[tool.poetry]
name = "solaredge-mqtt"
version = "0.1.1"
description = "A gateway from SolarEdge inverters using modbus TCP to MQTT"
authors = ["Ralf Ertzinger <ralf@skytale.net>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.6"
paho-mqtt = "^1.5.1"
typing_extensions = "^3.7.4"
solaredge-modbus = "^0.6.4"
pymodbus = "<3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
mypy = "^0.790"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
pylint = "^2.6.0"

[tool.poetry.scripts]
solaredge-mqtt = "solaredge_mqtt.cli:solaredge_mqtt"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
